[gd_scene load_steps=9 format=3 uid="uid://bpd5tcfc014ar"]

[ext_resource type="Script" path="res://main.gd" id="1_5r1l3"]
[ext_resource type="PackedScene" uid="uid://bt6f74qds3qxt" path="res://clickable.tscn" id="2_y4qq2"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_sy6e2"]
bg_color = Color(0.960784, 0.870588, 0.501961, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_py5r4"]
bg_color = Color(0.6, 0.6, 0.180392, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_46tp8"]
bg_color = Color(0.323693, 0.703659, 0.136759, 1)

[sub_resource type="LabelSettings" id="LabelSettings_8pywh"]
font_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ilbky"]
bg_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_a7sok"]
font_size = 48

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
mouse_filter = 1
script = ExtResource("1_5r1l3")

[node name="PanelContainer2" type="PanelContainer" parent="."]
layout_mode = 0
offset_top = 568.0
offset_right = 1366.0
offset_bottom = 768.0

[node name="UIBackground" type="Panel" parent="PanelContainer2"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_sy6e2")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 0
offset_right = 1366.0
offset_bottom = 568.0
mouse_filter = 1

[node name="ScreenOne" type="Panel" parent="PanelContainer"]
layout_mode = 2
mouse_filter = 1
theme_override_styles/panel = SubResource("StyleBoxFlat_py5r4")

[node name="Page1" parent="PanelContainer/ScreenOne" instance=ExtResource("2_y4qq2")]
position = Vector2(100, 100)
message = "page1"
active = true
imagePath = "res://icon.svg"

[node name="ScreenTwo" type="Panel" parent="PanelContainer"]
visible = false
layout_mode = 2
mouse_filter = 1
theme_override_styles/panel = SubResource("StyleBoxFlat_46tp8")

[node name="Page2" parent="PanelContainer/ScreenTwo" instance=ExtResource("2_y4qq2")]
position = Vector2(1000, 500)
message = "page2"
active = true
imagePath = "res://icon.svg"

[node name="ScreenThree" type="Panel" parent="PanelContainer"]
visible = false
layout_mode = 2

[node name="Page3" parent="PanelContainer/ScreenThree" instance=ExtResource("2_y4qq2")]
position = Vector2(100, 100)
message = "page3"
active = true
imagePath = "res://icon.svg"

[node name="ScreenFour" type="Panel" parent="PanelContainer"]
visible = false
layout_mode = 2

[node name="Page4" parent="PanelContainer/ScreenFour" instance=ExtResource("2_y4qq2")]
position = Vector2(100, 100)
message = "page4"
active = true
imagePath = "res://icon.svg"

[node name="UpButton" type="Button" parent="."]
clip_contents = true
layout_mode = 0
offset_left = 50.0
offset_top = 568.0
offset_right = 150.0
offset_bottom = 618.0
text = "^"

[node name="DownButton" type="Button" parent="."]
layout_mode = 0
offset_left = 50.0
offset_top = 718.0
offset_right = 150.0
offset_bottom = 768.0
text = "v"

[node name="LeftButton" type="Button" parent="."]
layout_mode = 0
offset_top = 618.0
offset_right = 50.0
offset_bottom = 718.0
text = "<"

[node name="RightButton" type="Button" parent="."]
layout_mode = 0
offset_left = 150.0
offset_top = 618.0
offset_right = 200.0
offset_bottom = 718.0
text = ">"

[node name="Button2" type="Button" parent="."]
layout_mode = 0
offset_left = 200.0
offset_top = 668.0
offset_right = 1366.0
offset_bottom = 768.0

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 200.0
offset_top = 568.0
offset_right = 1366.0
offset_bottom = 668.0
label_settings = SubResource("LabelSettings_8pywh")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3
text_overrun_behavior = 2

[node name="PanelContainer3" type="PanelContainer" parent="."]
visible = false
layout_mode = 0
offset_right = 1366.0
offset_bottom = 768.0
theme_override_styles/panel = SubResource("StyleBoxFlat_ilbky")

[node name="TitleScreen" type="Panel" parent="PanelContainer3"]
layout_mode = 2

[node name="Label2" type="Label" parent="."]
visible = false
custom_minimum_size = Vector2(1366, 568)
layout_mode = 2
offset_right = 1366.0
offset_bottom = 568.0
text = "You find yourself in a strange room, filled with a strange script."
label_settings = SubResource("LabelSettings_a7sok")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="Button" type="Button" parent="."]
visible = false
layout_mode = 0
offset_left = 483.0
offset_top = 593.0
offset_right = 883.0
offset_bottom = 700.0
theme_override_font_sizes/font_size = 72
text = "Begin"

[connection signal="pressed" from="UpButton" to="." method="_on_up_button_pressed"]
[connection signal="pressed" from="DownButton" to="." method="_on_down_button_pressed"]
[connection signal="pressed" from="LeftButton" to="." method="_on_left_button_pressed"]
[connection signal="pressed" from="RightButton" to="." method="_on_right_button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
